--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,11 @@
-sudo: false
-
 language: android
+android:
+ components:
+    - tools
+    - build-tools-24.0.3
+    - android-24
+    - extra-android-m2repository
 
 jdk: oraclejdk8
 
-android:
-  components:
-    - tools
-    - platform-tools
-    - tools
-    - build-tools-25.0.1
-    - android-25
-    - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-android-supportsys
-    - sys-img-armeabi-v7a-android-25
-  licenses:
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-    - '.+'
-
-# Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+script: ./gradlew testDebug
