--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ android:
     - build-tools-24.0.3
     - android-24
     - extra-android-m2repository
+  licenses:
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+    - '.+'
 
 jdk: oraclejdk8
 
