--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,13 @@
             android:name="it.niedermann.owncloud.notes.android.activity.NoteActivity"
             android:label="@string/app_name"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.EditNoteActivity"
-            />
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="content" android:host="*" android:pathPattern=".*" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SettingsActivity"
